--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,6 +1,10 @@
 // Body
 $body-bg: #f8fafc;
 
+// Components
+$component-bg: #3d3e48;
+$component-bg: #5f6068;
+
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
