--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -37,7 +37,11 @@
     font-weight: 700 !important;
 }
 
-//.el-pagination {
-//    color: #f8fafc !important;
-//    background-color: rgba(44, 46, 56, 0) !important;
-//}
+.el-input .el-input__count .el-input__count-inner {
+    background-color: #2c2e38 !important;
+    font-size: 15px !important;
+}
+
+.right-sum .el-input__inner{
+    text-align: right;
+}
