отмена удаления, решение проблем в консоли

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,7 +23,8 @@
 }
 
 .el-message-box {
-    background-color: #000000d6 !important;
+    background-color: rgba(61, 62, 72, 0.9) !important;
+    border: 1px solid #3badec7d !important;
     color: #f1cb08d9 !important;
 }
 
