--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -39,7 +39,7 @@
 }
 
 .el-input .el-input__count .el-input__count-inner {
-    background-color: #2c2e38 !important;
+    background-color: rgba(44, 46, 56, 0) !important;
     font-size: 15px !important;
 }
 
