--- a/resources/sass/_feed.scss
+++ b/resources/sass/_feed.scss
@@ -59,19 +59,20 @@
     text-overflow: clip;
 }
 
-.el-radio-button:first-child .el-radio-button__inner {
-    border-left: 1px solid #DCDFE6 !important;
-    border-radius: 4px 0 0 4px !important;
-    box-shadow: none !important;
+.el-pager, .el-pager li {
+    color: white !important;
+    background-color: #3d3e4800 !important;
 }
 
-.el-radio-button:last-child .el-radio-button__inner {
-    border-radius: 0 4px 4px 0 !important;
+.el-pagination button:disabled {
+    background-color: #3d3e4800 !important;
 }
 
-.el-radio-button__orig-radio:checked+.el-radio-button__inner {
-    color: #FFF !important;
-    background-color: #409EFF !important;
-    border-color: #409EFF !important;
-    box-shadow: -1px 0 0 0 #409EFF !important;
+.el-pagination .btn-next, .el-pagination .btn-prev {
+    color: white !important;
+    background-color: #3d3e4800 !important;
+}
+
+.el-pager li.active {
+    color: #409EFF !important;
 }
